--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/huynhtri90/DLC_API#readme",
   "dependencies": {
+    "cool-ascii-faces": "1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
