* Updated env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGOLAB_URI=mongodb://tri.hd@candybots.com:ngotalixiA123@ds163020.mlab.com:63020/dlc_api_db
+MONGOLAB_URI=mongodb://test:123@ds163020.mlab.com:63020/dlc_api_db
